扩充大写数字及编码

--- a/wubi86_duckling_extra.dict.yaml
+++ b/wubi86_duckling_extra.dict.yaml
@@ -55,3 +55,18 @@ sort: original
 飝	cccc
 龘	cccc
 麤	cccc
+
+## 大写数字
+零	zvdxs
+壹	zvdxs
+贰	zvdxs
+叁	zvdxs
+肆	zvdxs
+伍	zvdxs
+陆	zvdxs
+柒	zvdxs
+捌	zvdxs
+玖	zvdxs
+拾	zvdxs
+佰	zvdxs
+仟	zvdxs
