--- a/wubi86_duckling_extra.dict.yaml
+++ b/wubi86_duckling_extra.dict.yaml
@@ -13,7 +13,7 @@ sort: original
 
 ...
 ## 苹果符号
-	zvpg
+   zvpg
 ⌘	zvpg
 ⌥	zvpg
 
@@ -70,3 +70,7 @@ sort: original
 拾	zvdxs
 佰	zvdxs
 仟	zvdxs
+  
+## 其他
+语雀	ygiw
+和珅	tkgj
