加词 调整词序

--- a/wubi86_duckling.dict.yaml
+++ b/wubi86_duckling.dict.yaml
@@ -83881,8 +83881,8 @@ encoder:
 群	vtk	
 郡	vtkb	
 㪊	vtkc	
-群	vtkd	
 君	vtkd	
+群	vtkd	
 羣	vtkd	
 裠	vtke	
 娇嗔	vtkf	
@@ -93568,6 +93568,7 @@ encoder:
 讨巧	yfag	
 䜟	yfag	
 计划	yfaj	
+诸葛	yfaj	
 言过其实	yfap	
 庄子	yfbb	
 读取	yfbc	
